--- a/doku/design/frontend/frontend.tex
+++ b/doku/design/frontend/frontend.tex
@@ -227,5 +227,34 @@ Diese kann einfach an den Analyzer zurückgegeben werden.
 \subsection {Exception Handling}
 \ref{req:Sv:comm:exceptions}
 \section{Klassen und Komponenten}
+
+\subsection{Server und Client}
+
+\begin{figure}[H]
+	\centering
+	\label{dia:design:frontend:classes:svcl}
+	\includegraphics[width=\textwidth]{design/frontend/classes/Server-Client-Klassen.pdf}
+	\caption{Klassendiagramm: Server, Client und Connectionhandling}
+\end{figure}
+
+\subsection{Daten-Klassen}
+
+\begin{figure}[H]
+	\centering
+	\label{dia:design:frontend:classes:datcl}
+	\includegraphics[width=\textwidth]{design/frontend/classes/MessageDaten-Klassen.pdf}
+	\caption{Klassendiagramm: Datenklassen}
+\end{figure}
+
+\subsection{Message-Klassen}
+
+\begin{figure}[H]
+	\centering
+	\label{dia:design:frontend:classes:msgcl}
+	\includegraphics[width=0.5\textwidth]{design/frontend/classes/Message-Klassen.pdf}
+	\caption{Klassendiagramm: Datenklassen}
+\end{figure}
+
+
 \ref{req:Sv:comm}
 \section{Test Analysetool} \ref{req:Cl:testanalyzer}
