--- a/doku/spec/spec02-datamodel.tex
+++ b/doku/spec/spec02-datamodel.tex
@@ -16,8 +16,7 @@ Die Metadaten sollen vor allen Dingen Such- und Sortieraufgaben erleichtern.
 	\hline
 	mimeType	& String 				& MIME-Typ der Datei\\
 	\hline
-	title 		& String 				& Soweit vorhanden, wird der Titel der Seite \\ 
-	 			& 						& gespeichert \\ 
+	title 		& String 				& Generisches Feld, z.B. Titel eines HTMLs \\ 
 	\hline
 	path 		& String 				& Dateipfad zum Archivordner der Datei im Webarchiv \\
 	\hline
