--- a/doku/design/backend/backend.tex
+++ b/doku/design/backend/backend.tex
@@ -34,10 +34,10 @@ if __name__ == '__main__'
 \newpage
 \section{Programmablauf} 
 \label{sec:programmablauf}
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \label{dia:design:backend:overview}
-\includegraphics[width=\textwidth]{design/backend/gfx/backend_procedure.eps}
+\includegraphics[width=1.3\textwidth]{design/backend/gfx/backend_procedure.eps}
 \caption{Ablaufprozedur Backend}
 \end{figure}
 
@@ -53,10 +53,10 @@ Verantwortlich: \flo
 \paragraph{Ablauf:}
 \label{par:ablauf_}
 Grundlegender Ablauf beim Lesen von Configwerten:
-\begin{figure}[h!]
+\begin{figure}[H]
 	\centering
 	\label{dia:design:backend:overview}
-	\includegraphics[width=\textwidth]{design/backend/gfx/getting_value.eps}
+	\includegraphics[width=1.2\textwidth]{design/backend/gfx/getting_value.eps}
 	\caption{Werte aus der Konfigurationsdatei holen}
 \end{figure}
 
@@ -232,7 +232,7 @@ Verantwortlich: \ciii, \ci
 \begin{figure}[H]
 	\centering
 	\label{dia:design:backend:overview}
-	\includegraphics[width=\textwidth]{design/backend/gfx/crawljob.eps}
+	\includegraphics[width=1.3\textwidth]{design/backend/gfx/crawljob.eps}
 	\caption{CrawlJob Prozedur}
 \end{figure}
 
