--- a/doku/spec/spec02-datamodel.tex
+++ b/doku/spec/spec02-datamodel.tex
@@ -17,6 +17,7 @@ Die Metadaten sollen vor allen Dingen Such- und Sortieraufgaben erleichtern.
 	mimeType	& String 				& MIME-Typ der Datei\\
 	\hline
 	title 		& String 				& Generisches Feld, z.B. Titel eines HTMLs \\ 
+				& 						& Defaultwert: null \\
 	\hline
 	path 		& String 				& Dateipfad zum Archivordner der Datei im Webarchiv \\
 	\hline
