Fixed sabrinas (not compiling) latex part

--- a/doku/design/frontend/frontend.tex
+++ b/doku/design/frontend/frontend.tex
@@ -222,7 +222,9 @@ Diese kann einfach an den Analyzer zurückgegeben werden.
 % SABRINAS PART
 Zum Benachrichtigen über Neuerungen des Webarchivs für die Observer (Clients) wird ein Notifier eingesetzt.
 
-Dieser erhält beim Start ein Intervall, welches beschreibt, innerhalb welchen Zeitraum die Observer  benachrichtigt werden müssen. Ist das der Fall, startet ''Observerble'' die Benachrichtigungsroutine  "NotificationSequence". Sobald diese Beendet ist, legt sich der Threat  für das vorgegeben Intervall schlafen.
+Dieser erhält beim Start ein Intervall, welches beschreibt, innerhalb welchen Zeitraum die Observer  benachrichtigt werden müssen. 
+Ist das der Fall, startet ,,Observerble'' die Benachrichtigungsroutine  ,,NotificationSequence''.
+Sobald diese Beendet ist, legt sich der Threat  für das vorgegeben Intervall schlafen.
 
 \begin{figure}[H]
 	\centering
