--- a/doku/design/frontend/frontend.tex
+++ b/doku/design/frontend/frontend.tex
@@ -228,11 +228,11 @@ Diese kann einfach an den Analyzer zurückgegeben werden.
 
 \section {Client Notifier}
 % SABRINAS PART
-Zum Benachrichtigen über Neuerungen des Webarchivs für die Observer (Clients) wird ein Notifier eingesetzt.
+Zum benachrichtigen über Neuerungen des Webarchivs für die Observer (Clients) wird ein Notifier eingesetzt.
 
 Dieser erhält beim Start ein Intervall, welches beschreibt, innerhalb welchen Zeitraum die Observer  benachrichtigt werden müssen. 
 Ist das der Fall, startet ,,Observerble'' die Benachrichtigungsroutine  ,,NotificationSequence''.
-Sobald diese Beendet ist, legt sich der Threat  für das vorgegeben Intervall schlafen.
+Sobald diese beendet ist, legt sich der Threat  für das vorgegeben Intervall schlafen.
 
 \begin{figure}[H]
 	\centering
@@ -244,6 +244,9 @@ Sobald diese Beendet ist, legt sich der Threat  für das vorgegeben Intervall sc
 %\ref{req:Sv:comm:exceptions}
 
 Sobald Benachrichtigungsroutine mit dem Datum der letzten Suche gestartet wird, macht diese eine Anfrage bei der Datenbank. Als Antwort er hält sie Commit-Tags, welche anschließend in einer Liste zwischengespeichert werden. Danach sendet sie diese Liste an alle Clients. 
+
+\section{Log}
+Zum loggen von möglichen Fehler verwenden wir das Paket ,,java.util.logging'' von Java.
 
 
 \section{Klassen und Komponenten}
